# proprium

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  unit.yml
crates/proprium-core/: Cargo.toml
crates/proprium-core/src/: lib.rs  matrix.rs  point.rs  transformation.rs  vector.rs
crates/proprium-core/src/vector/: mod.rs  vector2d.rs  vector3d.rs  vector4d.rs
src/: lib.rs
